Make the structure of hangman (add it to header file), put menu in function(add it to header file). Fix #4 #5 #6

--- a/String-Project-Game/String-Project-Game.vcxproj
+++ b/String-Project-Game/String-Project-Game.vcxproj
@@ -141,6 +141,12 @@
   <ItemGroup>
     <ClCompile Include="String-Project-Game.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="hangman-structure.h" />
+    <ClInclude Include="hangman.h" />
+    <ClInclude Include="Header.h" />
+    <ClInclude Include="menuAndOptions.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
