--- a/String-Project-Game/String-Project-Game.vcxproj.filters
+++ b/String-Project-Game/String-Project-Game.vcxproj.filters
@@ -19,4 +19,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="hangman-structure.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Header.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="hangman.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="menuAndOptions.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
