--- a/String-Project-Game/String-Project-Game.vcxproj
+++ b/String-Project-Game/String-Project-Game.vcxproj
@@ -142,10 +142,10 @@
     <ClCompile Include="String-Project-Game.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="hangman-structure.h" />
     <ClInclude Include="hangman.h" />
-    <ClInclude Include="Header.h" />
+    <ClInclude Include="hangmanMenuAndOptions.h" />
     <ClInclude Include="menuAndOptions.h" />
+    <ClInclude Include="playerGameChoice.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
