--- a/String-Project-Game/String-Project-Game.vcxproj.filters
+++ b/String-Project-Game/String-Project-Game.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="hangManGame.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="typeRacerMenuAndOptions.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
