Add label for Hangman - Game Over.

--- a/String-Game/String-Game/String-Game.vcxproj
+++ b/String-Game/String-Game/String-Game.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="String-Game.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="gameOver.h" />
     <ClInclude Include="guessTheWordMenuAndOptions.h" />
     <ClInclude Include="hangManGame.h" />
     <ClInclude Include="hangmanMenuAndOptions.h" />
