--- a/String-Game/String-Game/String-Game.vcxproj.filters
+++ b/String-Game/String-Game/String-Game.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="Win.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="gameOver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
